src/test/ui/error-codes/E0008.nll.stderr
error[E0008]: cannot bind by-move into a pattern guard
  --> $DIR/E0008.rs:3:14
   |
LL |         Some(s) if s.len() == 0 => {},
   |              ^ moves value into pattern guard
   |
   = help: add #![feature(bind_by_move_pattern_guards)] to the crate attributes to enable

error: aborting due to previous error

For more information about this error, try `rustc --explain E0008`.
